# FirstTask

./: CMakeLists.txt  FirstTask.sln
Client/: CMakeLists.txt  Client.cpp  Client.h  Client.vcxproj  Client.vcxproj.filters  main.cpp  stdafx.h
Client/Debug/: CL.read.1.tlog  CL.write.1.tlog  Client.vcxprojResolveAssemblyReference.cache  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vc110.idb
CommonLib/: CMakeLists.txt  CommonLib.cpp  CommonLib.vcxproj  CommonLib.vcxproj.filters  PipeDll.cpp  PipeDll.h  PipeStatic.cpp  PipeStatic.h  ReadMe.txt  stdafx.cpp
CommonLib/Debug/: CL.read.1.tlog  CL.write.1.tlog  CommonLib.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vc110.idb
Debug/: Client.ilk  FirstTask.ilk  Server.ilk
Server/: CMakeLists.txt  Server.cpp  Server.h  Server.vcxproj  Server.vcxproj.filters  main.cpp  stdafx.h
Server/Debug/: CL.read.1.tlog  CL.write.1.tlog  Server.lastbuildstate  Server.vcxprojResolveAssemblyReference.cache  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vc110.idb
